# GeneticHaskell

./: Genetic.cabal  LICENSE
src/: Binary.hs  Chromosome.hs  Main.hs
