name:                Genetic
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/JonHarder/Genetic#readme
license:             BSD3
license-file:        LICENSE
author:              Jon Harder
maintainer:          jonharder6@gmail.com
copyright:           GPL-2
category:            executable
build-type:          Simple
cabal-version:       >=1.10

executable Genetic
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split
                     , random
  other-modules:       Binary
                     , Chromosome
